:bug: Added freelancer to be part of the free version

--- a/languages/impressum-de_DE.po
+++ b/languages/impressum-de_DE.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Impressum\n"
-"POT-Creation-Date: 2018-04-07 12:25+0200\n"
-"PO-Revision-Date: 2018-04-07 12:26+0200\n"
+"POT-Creation-Date: 2018-04-07 13:03+0200\n"
+"PO-Revision-Date: 2018-04-07 13:03+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -240,11 +240,12 @@ msgstr "Berufsrechtliche Regelungen"
 #: inc/impressum_frontend.class.php:559
 msgid ""
 "The Free version doesn’t contain the needed features for your selection. If "
-"your legal entity is not “Individual”, you need to purchase the Plus version."
+"your legal entity is not “Individual” or “Freelancer”, you need to purchase "
+"the Plus version."
 msgstr ""
 "Die kostenlose Version enthält nicht die benötigten Funktionen für deine "
-"Auswahl. Wenn deine Rechtsform nicht „Privatperson“ ist, musst du die Plus-"
-"Version erwerben."
+"Auswahl. Wenn deine Rechtsform nicht „Privatperson“ oder „Freiberufler“ ist, "
+"musst du die Plus-Version erwerben."
 
 #. Plugin Name of the plugin/theme
 msgid "Impressum"
